# DEMO

./: CMakeLists.txt  README.md  build.sh
include/: iterative_methods.hpp  min_lag_method.hpp  types.hpp  wave.hpp
src/: main_dev.cpp  min_lag_method.cpp  problems.cpp  problems.hpp
